# c_practice

./: CMakeLists.txt
02/1/: 02-1-1.c  02-1-2.c
02/2/: HelloComment.c
02/3/: 02-2-1.c  02-2-2.c  PrintTwo.c  PrintfOne.c
03/1/: SimpleAddTwo.c  VarDeclAndInit.c
03/2/: CommaOp.c  OperatorFive.c  OperatorFour.c  OperatorOne.c  OperatorSeven.c  OperatorSix.c  OperatorThree.c  OperatorTwo.c
03/3/: 03-1-1.c  03-1-2.c  03-1-3.c  03-1-4.c  03-1-5.c  SimpleAddFour.c  SimpleAddThree.c
04/1/: FloatError.c  Notation.c
04/3/: 04-4-1.c  04-4-2.c  BitAndOperation.c  BitLeftShift.c  BitNotOperation.c  BitOrOperation.c  BitRightShift.c
05/1/: CharShortBaseAdd.c  CircleArea.c  SizeOfOperator.c
05/2/: 05-1-1.c  05-1-2.c  05-1-4.c  05-1-5.c  HowChar.c
05/3/: LiteralSize.c
05/4/: AutoConvOne.c  ConvDiv.c
06/1/: FieldWidth.c  FormPrintf.c  OctHex.c  RealNumOutput.c  StringPointf.c  UsingPG.c
06/2/: ScanfConvOne.c  ScanfConvTwo.c
07/1/: 07-1-1.c  07-1-2.c  07-1-3.c  07-1-4.c  07-1-5.c  07-2-1.c  07-2-2.c  NineNineDan.c  SimpleWhile.c  TwoToNine.c
07/2/: 07-3-1-2.c  07-3-1.c  07-3-2.c  07-3-3.c  UsefulDoWhile.c
07/3/: AddToNum.c  RealMean.c
08/1/: 08-1-1.c  08-1-2.c  08-1-3.c  08-1-4.c  CalOne.c  CalTwo.c  IfBasic.c  IfElseBasic.c  Mul3Mul4.c  ThreeOperand.c
08/2/: 08-2-1.c  08-2-2.c  ExceptMul2Mul3.c  WhenOver5000.c
08/3/: 08-3.c  AdvanEnglishSchool.c  EnglishSchool.c  GoToBasic.c
09/1/: 09-1-1.c  09-1-2.c  09-1-3.c  AbsoCompare.c  NumCompare.c  PrintfOutput.c  SimpleAddFunc.c  SmartAddFunc.c
09/2/: AnotherLocalVal.c  LocalValHideVal.c  LocalVariable.c
09/3/: 09-2.c  GlobalVariable.c  LocalValHideGlobalVal.c  StaticLocalVariable.c
09/4/: RecursiveFactorial.c  RecursiveFunc.c
10/: Dogeon1.c  Dogeon2.c  Dogeon3.c  Dogeon3u.c  Dogeon4.c  Dogeon5.c  Dogeon6.c  Dogeon7.c  Dogeon8.c
11/1/: 11-1-1.c  11-1-2.c  ArrayAccess.c  ArrayInit.c
11/2/: 11-2-1.c  11-2-2.c  11-2-3.c  ArrayString.c  ReadString.c  StartEndString.c
12/2/: 12-1-1.c  12-1-2.c  PointerOperation.c
13/1/: ArrayNameIsPointer.c  ArrayNamePointerOperation.c  ArrayNameType.c
13/2/: 13-1-1.c  13-1-2.c  13-1-3.c  13-1-4.c  PointerBaseArrayAccess.c  PointerOperationResult.c
13/3/: TwoStringType.c
13/4/: PointerArray.c  StringArray.c
14/1/: ArrayParam.c  ArrayParamAccess.c
14/2/: 14-1-1.c  14-1-2.c  CallByRefSwap.c  CallByValueSwap.c
15/: 1.c  2.c  3.c  4.c  5.c
16/1/: 16-1-1.c  16-1-2.c  16-2-3.c  PopuResearch.c  TwoDimArrayAddr.c  TwoDimArrayInit.c  TwoDimArraySize.c
16/2/: ThreeDimArrayAccess.c  ThreeDimArraySize.c
17/1/: DoublePointerAccess.c  PointerArrayType.c  PointerSwapFail.c  PointerSwapSuccess.c
17/2/: 17-1.c  TriplePointer.c
18/1/: 2DArrNameAndArrPtr.c  2DArrPointerOp.c  2DArrayAccess.c
18/2/: 2DArrAccessType.c  2DArrParam.c  ArrPtrAndPtrArr.c
19/1/: FunctionPointer.c  UsefulFunctionPointer.c  VoidTypePointer.c
19/2/: ArgcArgv.c  ArgvEndNULL.c  ArgvParamType.c
20/: RandomNum.c  SeedRandomNum.c  TimeSeedRandomNum.c  d1.c  d2.c  d3.c  d4.c  d5.c  d6.c
21/2/: 21-1.c  ConsoleEOF.c  ReadWriteChar.c
21/3/: ReadString.c  WriteString.c
21/4/: InputButFlush.c  NeedInputBufFlush.c
21/5/: 21-2-1.c  21-2-2.c  21-2-3.c  ConvStringToPrimitive.c  RemoveBSN.c  StringCompCase.c  StringConcatCase.c  StringCopyCase.c
22/1/: 22-1.c  InitStructVal.c  TelephoneInfo.c  TwoPointDistance.c
22/2/: 22-2.c  InitStructArray.c  PointRelation.c  StructArray.c  StructPointer.c  StructPointerMem.c  StructValAddress.c
23/1/: StructTypedef.c  TypeNameTypedef.c
23/2/: 23-1.c  StructAddMin.c  StructFunctionCallByRef.c  StructMemArrCopy.c  StructOperation.c  StructValAndFunction.c
23/3/: 23-2.c  CircleIncludePoint.c  StructImportant.c
23/4/: UnionMemAlloc.c  UnionValAccess.c  UsefulUnionAccess.c
23/5/: EnumTypeTone.c
24/1/: FirstFileRead.c  FirstFileWrite.c
24/3/: 24-1-1.c  24-1-2.c  24-1-3.c  BinaryFileCopy.c  TextCharFileCopy.c  TextDataFileRead.c  TextDataFileWrite.c  TextStringFileCopy.c
24/4/: ComplexFileRead.c  ComplexFileWrite.c  StructFileWriteRead.c
24/5/: 24-2.c  MoveFileReWrPos.c  TellFileReWrPos.c
25/2/: 25-2-1.c  25-2-2.c  DynamicMemoryAllocation.c  ReadStringFault1.c  ReadStringFault2.c  ReadStringRight.c
26/2/: MacroConst.c  MacroFunction.c  MacroFunctionWeakness.c  MacroUseMacro.c
26/3/: elif_endif.c  else_endif.c  if_endif.c  ifdef_endif.c
26/4/: 26-1-1.c  26-1-2.c  26-1-3.c  MacroOpToString.c  UnivStdNum.c
27/1/: SimpleOneFile.c
27/1-1/: func.c  main.c
27/3/: main.c
27/3-1/: areaArith.c  areaArith.h  basicArith.c  basicArith.h  main.c  roundArith.c  roundArith.h
27/3-2/: intdiv.c  main.c
27/3-3/: intdiv3.c  main.c  stdiv.h
27/3-4/: intdiv4.c  intdiv4.h  main.c  stdiv2.h
28/: 28-2.c  28-3.c  28-4.c  28-5.c  28-7.c  d4-1.c
