cmake_minimum_required(VERSION 3.21)
project(c_practice C)

set(CMAKE_C_STANDARD 99)

add_executable(c_practice 02/1/main.c)

add_executable(02-1-1 02/1/02-1-1.c)
add_executable(02-1-2 02/1/02-1-2.c)
add_executable(HelloComment 02/2/HelloComment.c)
add_executable(PrintfOne 02/3/PrintfOne.c)
add_executable(PrintTwo 02/3/PrintTwo.c)
add_executable(02-2-1 02/3/02-2-1.c)
add_executable(02-2-2 02/3/02-2-2.c)
add_executable(SimpleAddOne 03/1/SimpleAddOne.c)
add_executable(VarDeclAndInit 03/1/VarDeclAndInit.c)
add_executable(simpleAddTwo 03/1/SimpleAddTwo.c)
add_executable(OperatorOne 03/2/OperatorOne.c)
add_executable(OperatorTwo 03/2/OperatorTwo.c)
add_executable(OperatorThree 03/2/OperatorThree.c)
add_executable(OperatorFour 03/2/OperatorFour.c)
add_executable(OperatorFive 03/2/OperatorFive.c)
add_executable(OperatorSix 03/2/OperatorSix.c)
add_executable(OperatorSeven 03/2/OperatorSeven.c)
add_executable(CommaOp 03/2/CommaOp.c)
add_executable(SimpleAddThree 03/3/SimpleAddThree.c)
add_executable(SimpleAddFour 03/3/SimpleAddFour.c)
add_executable(03-1-1 03/3/03-1-1.c)
add_executable(03-1-2 03/3/03-1-2.c)
add_executable(03-1-3 03/3/03-1-3.c)
add_executable(03-1-4 03/3/03-1-4.c)
add_executable(03-1-5 03/3/03-1-5.c)
add_executable(Notation 04/1/Notation.c)
add_executable(FloatError 04/1/FloatError.c)
add_executable(BitAndOperation 04/3/BitAndOperation.c)
add_executable(BitOrOperation 04/3/BitOrOperation.c)
add_executable(BitNotOperation 04/3/BitNotOperation.c)
add_executable(BitLeftShift 04/3/BitLeftShift.c)
add_executable(BitRightShift 04/3/BitRightShift.c)
add_executable(04-4-1 04/3/04-4-1.c)
add_executable(04-4-2 04/3/04-4-2.c)
add_executable(SizeOfOperator 05/1/SizeOfOperator.c)
add_executable(CharShortBaseAdd 05/1/CharShortBaseAdd.c)
add_executable(CircleArea 05/1/CircleArea.c)
add_executable(HowChar 05/2/HowChar.c)
add_executable(05-1-1 05/2/05-1-1.c)
add_executable(05-1-2 05/2/05-1-2.c)
add_executable(05-1-4 05/2/05-1-4.c)
add_executable(05-1-5 05/2/05-1-5.c)
add_executable(LiteralSize 05/3/LiteralSize.c)
add_executable(AutoConvOne 05/4/AutoConvOne.c)
add_executable(ConvDiv 05/4/ConvDiv.c)
add_executable(StringPointf 06/1/StringPointf.c)
add_executable(FormPrintf 06/1/FormPrintf.c)
add_executable(OctHex 06/1/OctHex.c)
add_executable(RealNumOutput 06/1/RealNumOutput.c)
add_executable(UsingPG 06/1/UsingPG.c)
add_executable(UsingPS 06/1/UsingPS.c)
add_executable(FieldWidth 06/1/FieldWidth.c)
add_executable(ScanfConvOne 06/2/ScanfConvOne.c)
add_executable(ScanfConvTwo 06/2/ScanfConvTwo.c)
add_executable(SimpleWhile 07/1/SimpleWhile.c)
add_executable(NineNineDan 07/1/NineNineDan.c)
add_executable(07-1-1 07/1/07-1-1.c)
add_executable(07-1-2 07/1/07-1-2.c)
add_executable(07-1-3 07/1/07-1-3.c)
add_executable(07-1-4 07/1/07-1-4.c)
add_executable(07-1-5 07/1/07-1-5.c)
add_executable(TwoToNine 07/1/TwoToNine.c)
add_executable(07-2-1 07/1/07-2-1.c)
add_executable(07-2-2 07/1/07-2-2.c)
add_executable(UsefulDoWhile 07/2/UsefulDoWhile.c)
add_executable(07-3-1 07/2/07-3-1.c)
add_executable(07-3-1-2 07/2/07-3-1-2.c)
add_executable(07-3-2 07/2/07-3-2.c)
add_executable(07-3-3 07/2/07-3-3.c)
add_executable(AddToNum 07/3/AddToNum.c)
add_executable(RealMean 07/3/RealMean.c)
add_executable(IfBasic 08/1/IfBasic.c)
add_executable(CalOne 08/1/CalOne.c)
add_executable(Mul3Mul4 08/1/Mul3Mul4.c)
add_executable(IfElseBasic 08/1/IfElseBasic.c)
add_executable(CalTwo 08/1/CalTwo.c)
add_executable(ThreeOperand 08/1/ThreeOperand.c)
add_executable(08-1-1 08/1/08-1-1.c)
add_executable(08-1-2 08/1/08-1-2.c)
add_executable(08-1-3 08/1/08-1-3.c)
add_executable(08-1-4 08/1/08-1-4.c)
add_executable(WhenOver5000 08/2/WhenOver5000.c)
add_executable(ExceptMul2Mul3 08/2/ExceptMul2Mul3.c)
add_executable(08-2-1 08/2/08-2-1.c)
add_executable(08-2-2 08/2/08-2-2.c)
add_executable(EnglishSchool 08/3/EnglishSchool.c)
add_executable(AdvanEnglishSchool 08/3/AdvanEnglishSchool.c)
add_executable(08-3 08/3/08-3.c)
add_executable(GoToBasic 08/3/GoToBasic.c)
add_executable(PrintfOutput 09/1/PrintfOutput.c)
add_executable(SimpleAddFunc 09/1/SimpleAddFunc.c)
add_executable(SmartAddFunc 09/1/SmartAddFunc.c)
add_executable(NumCompare 09/1/NumCompare.c)
add_executable(AbsoCompare 09/1/AbsoCompare.c)
add_executable(09-1-1 09/1/09-1-1.c)
add_executable(09-1-2 09/1/09-1-2.c)
add_executable(09-1-3 09/1/09-1-3.c)
add_executable(LocalVariable 09/2/LocalVariable.c)
add_executable(AnotherLocalVal 09/2/AnotherLocalVal.c)
add_executable(LocalValHideVal 09/2/LocalValHideVal.c)
add_executable(GlobalVariable 09/3/GlobalVariable.c)
add_executable(LocalValHideGlobalVal 09/3/LocalValHideGlobalVal.c)
add_executable(StaticLocalVariable 09/3/StaticLocalVariable.c)
add_executable(09-2 09/3/09-2.c)
add_executable(RecursiveFunc 09/4/RecursiveFunc.c)
add_executable(RecursiveFactorial 09/4/RecursiveFactorial.c)
add_executable(Dogeon1 10/Dogeon1.c)
add_executable(Dogeon2 10/Dogeon2.c)
add_executable(Dogeon3 10/Dogeon3.c)
add_executable(Dogeon3u 10/Dogeon3u.c)
add_executable(Dogeon4 10/Dogeon4.c)
add_executable(Dogeon5 10/Dogeon5.c)
add_executable(Dogeon6 10/Dogeon6.c)
add_executable(Dogeon7 10/Dogeon7.c)
add_executable(Dogeon8 10/Dogeon8.c)
add_executable(ArrayAccess 11/1/ArrayAccess.c)
add_executable(ArrayInit 11/1/ArrayInit.c)
add_executable(11-1-1 11/1/11-1-1.c)
add_executable(11-1-2 11/1/11-1-2.c)
add_executable(ArrayString 11/2/ArrayString.c)
add_executable(ReadString 11/2/ReadString.c)
add_executable(StartEndString 11/2/StartEndString.c)
add_executable(11-2-1 11/2/11-2-1.c)
add_executable(11-2-2 11/2/11-2-2.c)
add_executable(11-2-3 11/2/11-2-3.c)
add_executable(PointerOperation 12/2/PointerOperation.c)
add_executable(12-1-1 12/2/12-1-1.c)
add_executable(12-1-2 12/2/12-1-2.c)
add_executable(ArrayNameType 13/1/ArrayNameType.c)
add_executable(ArrayNamePointerOperation 13/1/ArrayNamePointerOperation.c)
add_executable(ArrayNameIsPointer 13/1/ArrayNameIsPointer.c)
add_executable(PointerOperationResult 13/2/PointerOperationResult.c)
add_executable(PointerBaseArrayAccess 13/2/PointerBaseArrayAccess.c)
add_executable(13-1-1 13/2/13-1-1.c)
add_executable(13-1-2 13/2/13-1-2.c)
add_executable(13-1-3 13/2/13-1-3.c)
add_executable(13-1-4 13/2/13-1-4.c)
add_executable(TwoStringType 13/3/TwoStringType.c)
add_executable(PointerArray 13/4/PointerArray.c)
add_executable(StringArray 13/4/StringArray.c)