cmake_minimum_required(VERSION 3.21)
project(c_practice C)

set(CMAKE_C_STANDARD 99)

add_executable(c_practice 02/1/main.c)

add_executable(02-1-1 02/1/02-1-1.c)
add_executable(02-1-2 02/1/02-1-2.c)
add_executable(HelloComment 02/2/HelloComment.c)
add_executable(PrintfOne 02/3/PrintfOne.c)
add_executable(PrintTwo 02/3/PrintTwo.c)
add_executable(02-2-1 02/3/02-2-1.c)
add_executable(02-2-2 02/3/02-2-2.c)
add_executable(SimpleAddOne 03/1/SimpleAddOne.c)
add_executable(VarDeclAndInit 03/1/VarDeclAndInit.c)
add_executable(simpleAddTwo 03/1/SimpleAddTwo.c)
add_executable(OperatorOne 03/2/OperatorOne.c)
add_executable(OperatorTwo 03/2/OperatorTwo.c)
add_executable(OperatorThree 03/2/OperatorThree.c)
add_executable(OperatorFour 03/2/OperatorFour.c)
add_executable(OperatorFive 03/2/OperatorFive.c)
add_executable(OperatorSix 03/2/OperatorSix.c)
add_executable(OperatorSeven 03/2/OperatorSeven.c)
add_executable(CommaOp 03/2/CommaOp.c)
add_executable(SimpleAddThree 03/3/SimpleAddThree.c)
add_executable(SimpleAddFour 03/3/SimpleAddFour.c)
add_executable(03-1-1 03/3/03-1-1.c)
add_executable(03-1-2 03/3/03-1-2.c)
add_executable(03-1-3 03/3/03-1-3.c)
add_executable(03-1-4 03/3/03-1-4.c)
add_executable(03-1-5 03/3/03-1-5.c)
add_executable(Notation 04/1/Notation.c)
add_executable(FloatError 04/1/FloatError.c)
add_executable(BitAndOperation 04/3/BitAndOperation.c)
add_executable(BitOrOperation 04/3/BitOrOperation.c)
add_executable(BitNotOperation 04/3/BitNotOperation.c)
add_executable(BitLeftShift 04/3/BitLeftShift.c)
add_executable(BitRightShift 04/3/BitRightShift.c)
add_executable(04-4-1 04/3/04-4-1.c)
add_executable(04-4-2 04/3/04-4-2.c)
add_executable(SizeOfOperator 05/1/SizeOfOperator.c)
add_executable(CharShortBaseAdd 05/1/CharShortBaseAdd.c)
add_executable(CircleArea 05/1/CircleArea.c)
add_executable(HowChar 05/2/HowChar.c)
add_executable(05-1-1 05/2/05-1-1.c)
add_executable(05-1-2 05/2/05-1-2.c)
add_executable(05-1-4 05/2/05-1-4.c)
add_executable(05-1-5 05/2/05-1-5.c)
add_executable(LiteralSize 05/3/LiteralSize.c)
add_executable(AutoConvOne 05/4/AutoConvOne.c)
add_executable(ConvDiv 05/4/ConvDiv.c)
add_executable(StringPointf 06/1/StringPointf.c)
add_executable(FormPrintf 06/1/FormPrintf.c)
add_executable(OctHex 06/1/OctHex.c)
add_executable(RealNumOutput 06/1/RealNumOutput.c)
add_executable(UsingPG 06/1/UsingPG.c)
add_executable(UsingPS 06/1/UsingPS.c)
add_executable(FieldWidth 06/1/FieldWidth.c)
add_executable(ScanfConvOne 06/2/ScanfConvOne.c)
add_executable(ScanfConvTwo 06/2/ScanfConvTwo.c)
add_executable(SimpleWhile 07/1/SimpleWhile.c)
add_executable(NineNineDan 07/1/NineNineDan.c)
add_executable(07-1-1 07/1/07-1-1.c)
add_executable(07-1-2 07/1/07-1-2.c)
add_executable(07-1-3 07/1/07-1-3.c)
add_executable(07-1-4 07/1/07-1-4.c)
add_executable(07-1-5 07/1/07-1-5.c)
add_executable(TwoToNine 07/1/TwoToNine.c)
add_executable(07-2-1 07/1/07-2-1.c)
add_executable(07-2-2 07/1/07-2-2.c)
add_executable(UsefulDoWhile 07/2/UsefulDoWhile.c)
add_executable(07-3-1 07/2/07-3-1.c)
add_executable(07-3-1-2 07/2/07-3-1-2.c)
add_executable(07-3-2 07/2/07-3-2.c)
add_executable(07-3-3 07/2/07-3-3.c)
add_executable(AddToNum 07/3/AddToNum.c)
add_executable(RealMean 07/3/RealMean.c)
add_executable(IfBasic 08/1/IfBasic.c)
add_executable(CalOne 08/1/CalOne.c)
add_executable(Mul3Mul4 08/1/Mul3Mul4.c)
add_executable(IfElseBasic 08/1/IfElseBasic.c)
add_executable(CalTwo 08/1/CalTwo.c)
add_executable(ThreeOperand 08/1/ThreeOperand.c)
add_executable(08-1-1 08/1/08-1-1.c)
add_executable(08-1-2 08/1/08-1-2.c)
add_executable(08-1-3 08/1/08-1-3.c)
add_executable(08-1-4 08/1/08-1-4.c)
add_executable(WhenOver5000 08/2/WhenOver5000.c)
add_executable(ExceptMul2Mul3 08/2/ExceptMul2Mul3.c)
add_executable(08-2-1 08/2/08-2-1.c)
add_executable(08-2-2 08/2/08-2-2.c)
add_executable(EnglishSchool 08/3/EnglishSchool.c)
add_executable(AdvanEnglishSchool 08/3/AdvanEnglishSchool.c)
add_executable(08-3 08/3/08-3.c)
add_executable(GoToBasic 08/3/GoToBasic.c)
add_executable(PrintfOutput 09/1/PrintfOutput.c)
add_executable(SimpleAddFunc 09/1/SimpleAddFunc.c)
add_executable(SmartAddFunc 09/1/SmartAddFunc.c)
add_executable(NumCompare 09/1/NumCompare.c)
add_executable(AbsoCompare 09/1/AbsoCompare.c)
add_executable(09-1-1 09/1/09-1-1.c)
add_executable(09-1-2 09/1/09-1-2.c)
add_executable(09-1-3 09/1/09-1-3.c)
add_executable(LocalVariable 09/2/LocalVariable.c)
add_executable(AnotherLocalVal 09/2/AnotherLocalVal.c)
add_executable(LocalValHideVal 09/2/LocalValHideVal.c)
add_executable(GlobalVariable 09/3/GlobalVariable.c)
add_executable(LocalValHideGlobalVal 09/3/LocalValHideGlobalVal.c)
add_executable(StaticLocalVariable 09/3/StaticLocalVariable.c)
add_executable(09-2 09/3/09-2.c)
add_executable(RecursiveFunc 09/4/RecursiveFunc.c)
add_executable(RecursiveFactorial 09/4/RecursiveFactorial.c)
add_executable(Dogeon1 10/Dogeon1.c)
add_executable(Dogeon2 10/Dogeon2.c)
add_executable(Dogeon3 10/Dogeon3.c)
add_executable(Dogeon3u 10/Dogeon3u.c)
add_executable(Dogeon4 10/Dogeon4.c)
add_executable(Dogeon5 10/Dogeon5.c)
add_executable(Dogeon6 10/Dogeon6.c)
add_executable(Dogeon7 10/Dogeon7.c)
add_executable(Dogeon8 10/Dogeon8.c)
add_executable(ArrayAccess 11/1/ArrayAccess.c)
add_executable(ArrayInit 11/1/ArrayInit.c)
add_executable(11-1-1 11/1/11-1-1.c)
add_executable(11-1-2 11/1/11-1-2.c)
add_executable(ArrayString 11/2/ArrayString.c)
add_executable(ReadString 11/2/ReadString.c)
add_executable(StartEndString 11/2/StartEndString.c)
add_executable(11-2-1 11/2/11-2-1.c)
add_executable(11-2-2 11/2/11-2-2.c)
add_executable(11-2-3 11/2/11-2-3.c)
add_executable(PointerOperation 12/2/PointerOperation.c)
add_executable(12-1-1 12/2/12-1-1.c)
add_executable(12-1-2 12/2/12-1-2.c)
add_executable(ArrayNameType 13/1/ArrayNameType.c)
add_executable(ArrayNamePointerOperation 13/1/ArrayNamePointerOperation.c)
add_executable(ArrayNameIsPointer 13/1/ArrayNameIsPointer.c)
add_executable(PointerOperationResult 13/2/PointerOperationResult.c)
add_executable(PointerBaseArrayAccess 13/2/PointerBaseArrayAccess.c)
add_executable(13-1-1 13/2/13-1-1.c)
add_executable(13-1-2 13/2/13-1-2.c)
add_executable(13-1-3 13/2/13-1-3.c)
add_executable(13-1-4 13/2/13-1-4.c)
add_executable(TwoStringType 13/3/TwoStringType.c)
add_executable(PointerArray 13/4/PointerArray.c)
add_executable(StringArray 13/4/StringArray.c)
add_executable(ArrayParam 14/1/ArrayParam.c)
add_executable(ArrayParamAccess 14/1/ArrayParamAccess.c)
add_executable(CallByValueSwap 14/2/CallByValueSwap.c)
add_executable(CallByRefSwap 14/2/CallByRefSwap.c)
add_executable(14-1-1 14/2/14-1-1.c)
add_executable(14-1-2 14/2/14-1-2.c)
add_executable(1 15/1.c)
add_executable(2 15/2.c)
add_executable(3 15/3.c)
add_executable(4 15/4.c)
add_executable(5 15/5.c)
add_executable(TwoDimArraySize 16/1/TwoDimArraySize.c)
add_executable(PopuResearch 16/1/PopuResearch.c)
add_executable(TwoDimArrayAddr 16/1/TwoDimArrayAddr.c)
add_executable(TwoDimArrayInit 16/1/TwoDimArrayInit.c)
add_executable(16-1-1 16/1/16-1-1.c)
add_executable(16-1-2 16/1/16-1-2.c)
add_executable(16-2-3 16/1/16-2-3.c)
add_executable(ThreeDimArraySize 16/2/ThreeDimArraySize.c)
add_executable(ThreeDimArrayAccess 16/2/ThreeDimArrayAccess.c)
add_executable(DoublePointerAccess 17/1/DoublePointerAccess.c)
add_executable(PointerSwapFail 17/1/PointerSwapFail.c)
add_executable(PointerSwapSuccess 17/1/PointerSwapSuccess.c)
add_executable(PointerArrayType 17/1/PointerArrayType.c)
add_executable(TriplePointer 17/2/TriplePointer.c)
add_executable(17-1 17/2/17-1.c)
add_executable(2DArrayAccess 18/1/2DArrayAccess.c)
add_executable(2DArrPointerOp 18/1/2DArrPointerOp.c)
add_executable(2DArrNameAndArrPtr 18/1/2DArrNameAndArrPtr.c)
add_executable(ArrPtrAndPtrArr 18/2/ArrPtrAndPtrArr.c)
add_executable(2DArrParam 18/2/2DArrParam.c)
add_executable(2DArrAccessType 18/2/2DArrAccessType.c)
add_executable(FunctionPointer 19/1/FunctionPointer.c)
add_executable(UsefulFunctionPointer 19/1/UsefulFunctionPointer.c)
add_executable(VoidTypePointer 19/1/VoidTypePointer.c)
add_executable(ArgcArgv 19/2/ArgcArgv.c)
add_executable(ArgvParamType 19/2/ArgvParamType.c)
add_executable(ArgvEndNULL 19/2/ArgvEndNULL.c)
add_executable(d1 20/d1.c)
add_executable(d2 20/d2.c)
add_executable(d3 20/d3.c)
add_executable(RandomNum 20/RandomNum.c)
add_executable(d4 20/d4.c)
add_executable(SeedRandomNum 20/SeedRandomNum.c)
add_executable(TimeSeedRandomNum 20/TimeSeedRandomNum.c)
add_executable(d5 20/d5.c)
add_executable(d6 20/d6.c)
add_executable(ReadWriteChar 21/2/ReadWriteChar.c)
add_executable(ConsoleEOF 21/2/ConsoleEOF.c)
add_executable(21-1 21/2/21-1.c)
add_executable(WriteString 21/3/WriteString.c)
add_executable(ReadString1 21/3/ReadString.c)

add_executable(NeedInputBufFlush 21/4/NeedInputBufFlush.c)
add_executable(InputButFlush 21/4/InputButFlush.c)
add_executable(RemoveBSN 21/5/RemoveBSN.c)
add_executable(StringCopyCase 21/5/StringCopyCase.c)
add_executable(StringConcatCase 21/5/StringConcatCase.c)
add_executable(StringCompCase 21/5/StringCompCase.c)
add_executable(ConvStringToPrimitive 21/5/ConvStringToPrimitive.c)
add_executable(21-2-1 21/5/21-2-1.c)
add_executable(21-2-2 21/5/21-2-2.c)
add_executable(21-2-3 21/5/21-2-3.c)
add_executable(TwoPointDistance 22/1/TwoPointDistance.c)
add_executable(TelephoneInfo 22/1/TelephoneInfo.c)
add_executable(22-1 22/1/22-1.c)
add_executable(InitStructVal 22/1/InitStructVal.c)
add_executable(StructArray 22/2/StructArray.c)
add_executable(InitStructArray 22/2/InitStructArray.c)
add_executable(22-2 22/2/22-2.c)
add_executable(StructPointer 22/2/StructPointer.c)
add_executable(StructPointerMem 22/2/StructPointerMem.c)
add_executable(PointRelation 22/2/PointRelation.c)
add_executable(StructValAddress 22/2/StructValAddress.c)
add_executable(TypeNameTypedef 23/1/TypeNameTypedef.c)
add_executable(StructTypedef 23/1/StructTypedef.c)
add_executable(StructValAndFunction 23/2/StructValAndFunction.c)
add_executable(StructMemArrCopy 23/2/StructMemArrCopy.c)
add_executable(StructFunctionCallByRef 23/2/StructFunctionCallByRef.c)
add_executable(StructOperation 23/2/StructOperation.c)
add_executable(StructAddMin 23/2/StructAddMin.c)
add_executable(23-1 23/2/23-1.c)
add_executable(StructImportant 23/3/StructImportant.c)
add_executable(CircleIncludePoint 23/3/CircleIncludePoint.c)
add_executable(23-2 23/3/23-2.c)
add_executable(UnionMemAlloc 23/4/UnionMemAlloc.c)
add_executable(UnionValAccess 23/4/UnionValAccess.c)
add_executable(UsefulUnionAccess 23/4/UsefulUnionAccess.c)
add_executable(EnumTypeTone 23/5/EnumTypeTone.c)
add_executable(FirstFileWrite 24/1/FirstFileWrite.c)
add_executable(FirstFileRead 24/1/FirstFileRead.c)
add_executable(TextDataFileWrite 24/3/TextDataFileWrite.c)
add_executable(TextDataFileRead 24/3/TextDataFileRead.c)
add_executable(TextCharFileCopy 24/3/TextCharFileCopy.c)
add_executable(TextStringFileCopy 24/3/TextStringFileCopy.c)
add_executable(BinaryFileCopy 24/3/BinaryFileCopy.c)
add_executable(24-1-1 24/3/24-1-1.c)
add_executable(24-1-2 24/3/24-1-2.c)
add_executable(24-1-3 24/3/24-1-3.c)
add_executable(ComplexFileWrite 24/4/ComplexFileWrite.c)
add_executable(ComplexFileRead 24/4/ComplexFileRead.c)
add_executable(StructFileWriteRead 24/4/StructFileWriteRead.c)
add_executable(MoveFileReWrPos 24/5/MoveFileReWrPos.c)
add_executable(TellFileReWrPos 24/5/TellFileReWrPos.c)
add_executable(24-2 24/5/24-2.c)
add_executable(ReadStringFault1 25/2/ReadStringFault1.c)
add_executable(ReadStringFault2 25/2/ReadStringFault2.c)
add_executable(DynamicMemoryAllocation 25/2/DynamicMemoryAllocation.c)
add_executable(ReadStringRight 25/2/ReadStringRight.c)
add_executable(25-2-1 25/2/25-2-1.c)
add_executable(25-2-2 25/2/25-2-2.c)
add_executable(MacroConst 26/2/MacroConst.c)
add_executable(MacroFunction 26/2/MacroFunction.c)
add_executable(MacroUseMacro 26/2/MacroUseMacro.c)
add_executable(MacroFunctionWeakness 26/2/MacroFunctionWeakness.c)
add_executable(if_endif 26/3/if_endif.c)
add_executable(ifdef_endif 26/3/ifdef_endif.c)
add_executable(else_endif 26/3/else_endif.c)
add_executable(elif_endif 26/3/elif_endif.c)
add_executable(MacroOpToString 26/4/MacroOpToString.c)
add_executable(UnivStdNum 26/4/UnivStdNum.c)
add_executable(26-1-1 26/4/26-1-1.c)
add_executable(26-1-2 26/4/26-1-2.c)
add_executable(26-1-3 26/4/26-1-3.c)
add_executable(SimpleOneFile 27/1/SimpleOneFile.c)
add_executable(main 27/1-1/main.c 27/1-1/func.c 27/1-1/num.c)
add_executable(main2 27/3/header1.h 27/3/header2.h 27/3/main.c)
add_executable(main3 27/3-1/areaArith.c 27/3-1/areaArith.h 27/3-1/basicArith.c 27/3-1/basicArith.h
        27/3-1/main.c 27/3-1/roundArith.c 27/3-1/roundArith.h)
add_executable(main4 27/3-2/main.c 27/3-2/intdiv.c)
add_executable(main5 27/3-4/intdiv4.c 27/3-4/intdiv4.h 27/3-4/main.c 27/3-4/stdiv2.h)
add_executable(d4-1 28/d4-1.c)
add_executable(28-5 28/28-5.c)
add_executable(28-4 28/28-4.c)
add_executable(28-3 28/28-3.c)
add_executable(28-2 28/28-2.c)
add_executable(28-7 28/28-7.c)